[gd_scene load_steps=15 format=2]

[ext_resource path="res://fonts/PixelFJVerdana12pt.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://user_interface.gd" type="Script" id=2]
[ext_resource path="res://custom_slider.png" type="Texture" id=3]
[ext_resource path="res://buttons.png" type="Texture" id=4]
[ext_resource path="res://menu/pause_scene/pause_and_end_level.tscn" type="PackedScene" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 12 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 12 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 0, 12, 16, 12 )

[sub_resource type="StyleBoxTexture" id=4]
texture = SubResource( 3 )
region_rect = Rect2( 0, 0, 16, 12 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 48, 16, 12 )

[sub_resource type="StyleBoxTexture" id=6]
texture = SubResource( 5 )
region_rect = Rect2( 0, 0, 16, 12 )
margin_left = 15.9129
margin_right = 15.9086
margin_top = 11.9746
margin_bottom = 11.9558

[sub_resource type="DynamicFont" id=7]
size = 8
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 0, 288, 48, 40 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 80, 288, 48, 40 )

[node name="UI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="Control"]
margin_left = 10.0
margin_top = 30.0
margin_right = 160.0
margin_bottom = 80.0
rect_min_size = Vector2( 110, 50 )
custom_icons/grabber_highlight = SubResource( 1 )
custom_icons/grabber = SubResource( 2 )
custom_styles/slider = SubResource( 4 )
custom_styles/grabber_area = SubResource( 6 )
min_value = 0.1
max_value = 2.5
step = 0.01
value = 1.0
scrollable = false
tick_count = 15
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
margin_left = 60.0
margin_top = 20.0
margin_right = 102.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 7 )
text = "Zoom"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="TextureButton" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -70.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 60.0
texture_normal = SubResource( 8 )
texture_pressed = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseAndEndLevelScene" parent="." instance=ExtResource( 5 )]
visible = false
[connection signal="mouse_entered" from="Control/HSlider" to="." method="_on_Control_mouse_entered"]
[connection signal="mouse_exited" from="Control/HSlider" to="." method="_on_Control_mouse_exited"]
[connection signal="value_changed" from="Control/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="mouse_entered" from="Control/Pause" to="." method="_on_Control_mouse_entered"]
[connection signal="mouse_exited" from="Control/Pause" to="." method="_on_Control_mouse_exited"]
[connection signal="pressed" from="Control/Pause" to="." method="_on_Pause_pressed"]
[connection signal="onNextGamePressed" from="PauseAndEndLevelScene" to="." method="_on_PauseAndEndLevelScene_onNextGamePressed"]
[connection signal="onRestartPressed" from="PauseAndEndLevelScene" to="." method="_on_PauseAndEndLevelScene_onRestartPressed"]
[connection signal="onResumePressed" from="PauseAndEndLevelScene" to="." method="_on_PauseAndEndLevelScene_onResumePressed"]
[connection signal="onTitleScreenPressed" from="PauseAndEndLevelScene" to="." method="_on_PauseAndEndLevelScene_onTitleScreenPressed"]
